--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                                 <ul class="dropdown-menu">
                                     <!--Administrador-->
                                     <li><a href="@Url.Action("Asignacion", "CuentaUsuario")">Asignar turnos y puntos de venta</a></li>
-                                    <li><a href="@Url.Action("Politicas", "CuentaUsuario")">Políticas de la empresa</a></li>
+                                    <li><a href="@Url.Action("Politicas", "Politicas")">Políticas de la empresa</a></li>
                                     <li><a href="@Url.Action("Index", "TipoDeCambio")">Tipo de cambio</a></li>
                                     <li><a href="@Url.Action("Pago", "Ventas")">Registrar pagos</a></li>
                                     <li><a href="@Url.Action("PagoOrganizador", "Ventas")">Registrar pagos de Penalidad</a></li>
