--- a/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
@@ -2,7 +2,7 @@
 @using WebApplication4.Controllers
 @model VenderEntradaModel
 @{
-    ViewBag.Title = "ComprarEntradaReservadaA";
+    ViewBag.Title = "Vender Entrada";
     Layout = "~/Views/Shared/_Layout.cshtml";
     inf245netsoft db = new inf245netsoft();
     List<Promociones> promocionesLista = ViewBag.Promociones as List<Promociones>;
